# findajob

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.local.md.example  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  fly.toml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: build-image.yml  ci.yml  create-release.yml  pii-scan.yml
candidate_context/: profile.md.example
candidate_context/voice_samples/: README.md
config/: active_sources.txt.example  algora_orgs.txt.example  audit_exclusions.yaml  companies_of_interest.txt.example  company_aliases.yaml.example  excluded_employers.yaml.example  feed_urls.txt.example  in_domain_patterns.yaml.example  jsearch_queries.txt.example  loose_ends_walkthrough_exclusions.yaml  loose_ends_walkthroughs.yaml  model_pricing.yaml  paths.env.example  prefilter_rules.yaml.example  profile.md.example  ranking_boost_terms.yaml.example  rapidapi_feeds.yaml.example  reference.docx  scoring_schema.json  strip-bookmarks.lua  target_companies.md.example  title_signal_keywords.yaml.example
config/roles/: briefing_writer.md  candidate_led_briefing.md  company_discoverer.md  company_researcher.md  cover_letter_writer.md  fit_analyst.md  flashcard_generator.md  interview_prep.md  job_scorer.md  loose_ends_action_without_confirmation.md  loose_ends_classifier.md  loose_ends_empty_state_no_guidance.md  loose_ends_flow_without_exit.md  loose_ends_prose_writer.md  loose_ends_walkthrough_prose_writer.md  network_analyst.md  onboarding_interviewer.md  outreach_drafter.md  podcast_scriptwriter.md  recall_auditor.md  recruiter_critic.md  resume_change_reviewer.md  resume_tailor.md  speculative_roles_synth.md  study_guide_generator.md  voice_processor.md
config/tool_prompts/: cover_letter_voice.md  exclusion_tuning.md  profile_refresh.md
data/: .env.example
docs/: GENERALIZATION.md  IDEAS.md  ISSUES.md  architecture.md  claude-code.md  findajob-test-reset.md  google-sheets.md  learnings.md  master_resume.md.example  notifications.md  onboarding-prework-checklist.md  operations.md  plan-conventions.md  project-board.md  refactor_recommendations.md  release-process.md  roadmap.md  scripts-reference.md  troubleshooting.md  tuning.md  updating.md  usage.md
docs/architecture/: file-map.md
docs/getting-started/: README.md  api-keys.md  configure.md  cost.md  gmail.md  install-docker.md  install-fly.md  notifications.md  pre-commit-hook.example.sh  prerequisites.md  restore.md  start-here-fly.md
docs/handoff/: 2026-05-01-jared-pickup.md
docs/maintainers/: data-ownership.md  generalization.md  pipeline-context.md  project-board.md  release-parity-matrix.md  release-process.md  tester-migration.md
docs/operations/: README.md  config-reference.md  fly-deploy.md  install-docker.md  internet-exposure.md  restore.md
docs/setup/: README.md  api-keys.md  configure.md  gmail.md  install-docker.md  install-linux.md  install-macos.md  internet-exposure.md  pre-commit-hook.example.sh  prerequisites.md  restore.md  state-migration.md
docs/usage/: expanding-sources.md
ops/: compose.yaml.example  crontab  entrypoint.sh  fly-deploy.sh  fly.toml.example  scheduled-jobs.yaml  stack.env.example
ops/aichat-ng/: config.yaml.example  models-override.yaml
scripts/: analyze_feedback.py  audit_loose_ends.py  backfill_company_tier.py  backfill_jd.py  backfill_linkedin_titles.py  backfill_scored_by.py  bootstrap.sh  cleanup_reject_reasons.py  critique_review.py  detect_rejections.py  discover_companies.py  drift_alert.py  fetchers.py  find_contacts.py  gmail_auth.py  ingest_form.py  init_db.py  init_sheet.py  interview_prep.py  manual_prep.py  migrate_add_loose_fingerprint.py  migrate_add_user_notes.py  migrate_add_waitlisted.py  migrate_ashby_lever_company_names.py  migrate_cost_log_columns.py  notify.py  paths.py  poll_flags.py  poll_openrouter_credits.py  prep_application.py  read_env_value.py  recall_audit.py  rename_folders.py  render_crontab.py  rescore_all.py  resolve_timezone.py  run_speculative_research.py  scorer_prefilter.py  scoring.py  scrub_embedding_client.py  (+12 more)
scripts/diag/: cache_control_spike.py  debug_contacts.py  probe_scorer.py  regen_resumes.py  validate_resume.py
src/findajob/: __init__.py  actions.py  analyze_feedback.py  audit.py  background_tasks.py  classification.py  cleaning.py  config_loader.py  config_seed.py  cost_rollups.py  cost_tracking.py  db.py  fetchers.py  find_contacts.py  gmail_imap.py  ingest.py  jsonl_tail.py  llm_parsing.py  openrouter_credits.py  paths.py  prep_naming.py  profile.py  scorer_prefilter.py  scoring.py  spend_ceiling.py  tiers.py  (+3 more)
tests/: _schema_introspect.py  conftest.py  conftest_admin.py  test_actions.py  test_actions_resurface.py  test_active_filters_render.py  test_active_sources_parser.py  test_adapter_base.py  test_adapter_protocol_invariants.py  test_adapter_registry.py  test_adapter_shared_key.py  test_admin_jsonl_tail.py  test_admin_nav.py  test_admin_sqlite_uri_invariants.py  test_admin_stack_discovery.py  test_admin_stack_health.py  test_admin_stacks_route.py  test_aichat_config_template.py  test_algora_bounties_adapter.py  test_analyze_feedback.py  test_analyze_feedback_import_safety.py  test_app_spend_chip_context.py  test_apply_snapshot.py  test_ashby_adapter.py  test_audit.py  test_audit_atomicity.py  test_audit_cron_event_span.py  test_audit_rotation.py  test_backfill_phase1.py  test_background_tasks.py  test_background_tasks_schema.py  test_background_tasks_writeback.py  test_backup.py  test_board_actions.py  test_board_modal_accessibility.py  test_chat_render.py  test_classification.py  test_cleaning.py  test_cleaning_degenerate_title.py  test_cleanup_reject_reasons.py  (+272 more)
(+514 files in other folders)
