[project]
name = "findajob"
version = "0.1.0"
description = "AI-powered, self-hosted job search pipeline"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.194.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "requests>=2.31.0",
    "jsonschema>=4.26.0",
    "beautifulsoup4>=4.14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11.0",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["scripts/clean_company.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"scripts/scorer_prefilter.py" = ["E501"]
"scripts/analyze_feedback.py" = ["E501"]
"scripts/diag/probe_scorer.py" = ["E501"]
"scripts/manual_prep.py" = ["E501"]
"scripts/rescore_all.py" = ["E501"]
"scripts/*.py" = ["E402"]  # sys.path.insert before local imports is intentional
"scripts/diag/*.py" = ["E402"]
