[project]
name = "findajob"
version = "0.1.0"
description = "AI-powered, self-hosted job search pipeline"
requires-python = ">=3.12"
dependencies = [
    "google-api-python-client>=2.194.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "requests>=2.31.0",
    "jsonschema>=4.26.0",
    "beautifulsoup4>=4.14.0",
    "pyyaml>=6.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.0",
    "markdown>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.11.0",
    "mypy>=1.20.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disable_error_code = ["import-untyped"]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["scripts/clean_company.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"src/findajob/scorer_prefilter.py" = ["E501"]
"scripts/analyze_feedback.py" = ["E501"]
"scripts/diag/probe_scorer.py" = ["E501"]
"scripts/manual_prep.py" = ["E501"]
"scripts/rescore_all.py" = ["E501"]
